--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -1,2 +1,9 @@
 #\ub300\ubb38\ud398\uc774\uc9c0
 /main/main.do=kr.main.action.MainAction
+#\ud68c\uc6d0\uac00\uc785
+/member/registerUserForm.do=kr.member.action.RegisterUserFormAction
+/member/registerUser.do=kr.member.action.RegisterUserAction
+/member/checkDuplicatedId.do=kr.member.action.CheckDuplicatedIdAction
+/member/loginForm.do=kr.member.action.LoginFormAction
+/member/login.do=kr.member.action.LoginAction
+/member/logout.do=kr.member.action.LogoutAction
