회원가입&로그인/아웃

--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -7,3 +7,11 @@
 /member/loginForm.do=kr.member.action.LoginFormAction
 /member/login.do=kr.member.action.LoginAction
 /member/logout.do=kr.member.action.LogoutAction
+/member/myPage.do=kr.member.action.MyPageAction
+/member/updateMyPhoto.do=kr.member.action.UpdateMyPhotoAction
+/member/modifyPasswordForm.do=kr.member.action.ModifyPasswordFormAction
+/member/modifyPassword.do=kr.member.action.ModifyPasswordAction
+/member/modifyUserForm.do=kr.member.action.ModifyUserFormAction
+/member/modifyUser.do=kr.member.action.ModifyUserAction
+/member/deleteUserForm.do=kr.member.action.DeleteUserFormAction
+/member/deleteUser.do=kr.member.action.DeleteUserAction
