--- a/traveller/src/main/webapp/WEB-INF/jaeil.properties
+++ b/traveller/src/main/webapp/WEB-INF/jaeil.properties
@@ -1,2 +1,3 @@
 /comm/list.do=kr.comm.action.ListAction
 /comm/write.do=kr.comm.action.WriteAction
+/comm/writeForm.do=kr.comm.action.WriteFormAction
