--- a/traveller/src/main/webapp/WEB-INF/jaeil.properties
+++ b/traveller/src/main/webapp/WEB-INF/jaeil.properties
@@ -1,3 +1,7 @@
 /comm/list.do=kr.comm.action.ListAction
 /comm/write.do=kr.comm.action.WriteAction
 /comm/writeForm.do=kr.comm.action.WriteFormAction
+/comm/detail.do=kr.comm.action.DetailAction
+/comm/updateForm.do=kr.comm.action.UpdateFormAction
+/comm/update.do=kr.comm.action.UpdateAction
+/comm/deleteFile.do=kr.comm.action.deleteFileAction
