--- a/traveller/src/main/webapp/WEB-INF/jaeil.properties
+++ b/traveller/src/main/webapp/WEB-INF/jaeil.properties
@@ -5,3 +5,4 @@
 /comm/updateForm.do=kr.comm.action.UpdateFormAction
 /comm/update.do=kr.comm.action.UpdateAction
 /comm/deleteFile.do=kr.comm.action.deleteFileAction
+/comm/delete.do=kr.comm.action.DeleteAction
