--- a/traveller/src/main/webapp/WEB-INF/jaeil.properties
+++ b/traveller/src/main/webapp/WEB-INF/jaeil.properties
@@ -6,3 +6,6 @@
 /comm/update.do=kr.comm.action.UpdateAction
 /comm/deleteFile.do=kr.comm.action.deleteFileAction
 /comm/delete.do=kr.comm.action.DeleteAction
+#\uc88b\uc544\uc694
+/comm/getFav.do=kr.comm.action.GetFavAction
+/comm/writeFav.do=kr.comm.action.WriteFavAction
