--- a/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
+++ b/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
@@ -2,3 +2,4 @@
 /admin/main.do=kr.admin.action.MainAction
 /admin/itemList.do=kr.item.action.ItemListAction
 /admin/itemInsert.do=kr.item.action.ItemInsertAction
+/admin/itemInsertForm.do=kr.item.action.ItemInsertFormAction
