--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -1,12 +1,15 @@
 #\ub300\ubb38\ud398\uc774\uc9c0
 /main/main.do=kr.main.action.MainAction
-#\ud68c\uc6d0\uac00\uc785
+#\ud68c\uc6d0\uac00\uc785 & \ub85c\uadf8\uc778
 /member/registerUserForm.do=kr.member.action.RegisterUserFormAction
 /member/registerUser.do=kr.member.action.RegisterUserAction
 /member/checkDuplicatedId.do=kr.member.action.CheckDuplicatedIdAction
 /member/loginForm.do=kr.member.action.LoginFormAction
 /member/login.do=kr.member.action.LoginAction
 /member/logout.do=kr.member.action.LogoutAction
+/member/findPasswordForm.do=kr.member.action.FindPasswordFormAction
+/member/findPassword.do=kr.member.action.FindPasswordAction
+#\ub9c8\uc774\ud398\uc774\uc9c0
 /member/myPage.do=kr.member.action.MyPageAction
 /member/updateMyPhoto.do=kr.member.action.UpdateMyPhotoAction
 /member/modifyPasswordForm.do=kr.member.action.ModifyPasswordFormAction
@@ -15,6 +18,5 @@
 /member/modifyUser.do=kr.member.action.ModifyUserAction
 /member/deleteUserForm.do=kr.member.action.DeleteUserFormAction
 /member/deleteUser.do=kr.member.action.DeleteUserAction
-/member/findPasswordForm.do=kr.member.action.FindPasswordFormAction
-/member/findPassword.do=kr.member.action.FindPasswordAction
-
+#\ub9c8\uc774\ud398\uc774\uc9c0-\ub0b4\uac00 \uc4f4 \uae00
+/member/myWriteComm.do=kr.member.action.MyWriteCommAction
