--- a/traveller/src/main/webapp/WEB-INF/jaeil.properties
+++ b/traveller/src/main/webapp/WEB-INF/jaeil.properties
@@ -9,3 +9,8 @@
 #\uc88b\uc544\uc694
 /comm/getFav.do=kr.comm.action.GetFavAction
 /comm/writeFav.do=kr.comm.action.WriteFavAction
+#\ub313\uae00
+/comm/writeReply.do=kr.comm.action.WriteReplyAction
+/comm/listReply.do=kr.comm.action.ListReplyAction
+/comm/deleteReply.do=kr.comm.action.DeleteReplyAction
+/comm/updateReply.do=kr.comm.action.UpdateReplyAction
