--- a/traveller/src/main/webapp/WEB-INF/sungho.properties
+++ b/traveller/src/main/webapp/WEB-INF/sungho.properties
@@ -1,2 +1,4 @@
 #\ub3d9\ud589\ucc3e\uae30 \uac8c\uc2dc\ud310
 /accom/list.do=kr.accom.action.ListAction
+/accom/write.do=kr.accom.action.WriteAction
+/accom/writeForm.do=kr.accom.action.WriteFormAction
