--- a/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
+++ b/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
@@ -3,3 +3,4 @@
 /admin/itemList.do=kr.item.action.ItemListAction
 /admin/itemInsert.do=kr.item.action.ItemInsertAction
 /admin/itemInsertForm.do=kr.item.action.ItemInsertFormAction
+/admin/itemDetail.do=kr.item.action.ItemDetailAction
