--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -24,3 +24,4 @@
 #\uad00\ub9ac\uc790
 /admin/userList.do=kr.admin.action.UserListAction
 /admin/detailUserForm.do=kr.admin.action.DetailUserFormAction
+/admin/detailUser.do=kr.admin.action.DetailUserAction
