이벤트 커밋

--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -1,8 +1,13 @@
-
-
-
-
-
-
-
-
+#\uc774\ubca4\ud2b8
+/event/eventList.do=kr.event.action.EventListAction
+/event/eventDetail.do=kr.event.action.EventDetailAction
+/event/eventUpdateForm.do=kr.event.action.EventUpdateFormAction
+/event/eventUpdate.do=kr.event.action.EventUpdateAction
+#\uc774\ubca4\ud2b8-\ub313\uae00
+/event/writeEventReply.do=kr.event.action.EventReplyWriteAction
+/event/eventReplyList.do=kr.event.action.EventReplyListAction
+/event/eventReplyUpdate.do=kr.event.action.EventReplyUpdateAction
+/event/deleteEventReply.do=kr.event.action.EventReplyDeleteAction
+#\uc77c\ub300\uc77c\ubb38\uc758
+/question/questionList.do=kr.question.action.QuestionListAction
+/question/questionWriteForm.do=kr.question.action.QuestionWriteFormAction
