은서-적립금 외 수정

--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -21,6 +21,8 @@
 #\ub9c8\uc774\ud398\uc774\uc9c0-\ub0b4\uac00 \uc4f4 \uae00
 /member/myWriteComm.do=kr.member.action.MyWriteCommAction
 /member/myWriteAccom.do=kr.member.action.MyWriteAccomAction
+#\ub9c8\uc774\ud398\uc774\uc9c0-\uc801\ub9bd\uae08
+/member/myWriteMoney.do=kr.money.action.ListMoneyAction
 #\uad00\ub9ac\uc790
 /admin/userList.do=kr.admin.action.UserListAction
 /admin/detailUserForm.do=kr.admin.action.DetailUserFormAction
