일대일 문의 중간 수정

--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -11,3 +11,4 @@
 #\uc77c\ub300\uc77c\ubb38\uc758
 /question/questionList.do=kr.question.action.QuestionListAction
 /question/questionWriteForm.do=kr.question.action.QuestionWriteFormAction
+/question/questionWrite.do=kr.question.action.QuestionWriteAction
