--- a/traveller/src/main/webapp/WEB-INF/sungho.properties
+++ b/traveller/src/main/webapp/WEB-INF/sungho.properties
@@ -3,3 +3,6 @@
 /accom/write.do=kr.accom.action.WriteAction
 /accom/writeForm.do=kr.accom.action.WriteFormAction
 /accom/detail.do=kr.accom.action.DetailAction
+/accom/updateForm.do=kr.accom.action.UpdateFormAction
+/accom/deleteFile.do=kr.accom.action.DeleteFileAction
+/accom/delete.do=kr.accom.action.DeleteAction
