마이페이지-1:1문의

--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -18,6 +18,7 @@
 /member/modifyUser.do=kr.member.action.ModifyUserAction
 /member/deleteUserForm.do=kr.member.action.DeleteUserFormAction
 /member/deleteUser.do=kr.member.action.DeleteUserAction
+/member/myQuestion.do=kr.member.action.MyQuestionAction
 #\ub9c8\uc774\ud398\uc774\uc9c0-\ub0b4\uac00 \uc4f4 \uae00
 /member/myWriteComm.do=kr.member.action.MyWriteCommAction
 /member/myWriteAccom.do=kr.member.action.MyWriteAccomAction
