--- a/traveller/src/main/webapp/WEB-INF/jaeil.properties
+++ b/traveller/src/main/webapp/WEB-INF/jaeil.properties
@@ -1,3 +1,4 @@
+#\ucee4\ubba4\ub2c8\ud2f0\uac8c\uc2dc\ud310
 /comm/list.do=kr.comm.action.ListAction
 /comm/write.do=kr.comm.action.WriteAction
 /comm/writeForm.do=kr.comm.action.WriteFormAction
@@ -14,3 +15,7 @@
 /comm/listReply.do=kr.comm.action.ListReplyAction
 /comm/deleteReply.do=kr.comm.action.DeleteReplyAction
 /comm/updateReply.do=kr.comm.action.UpdateReplyAction
+#\uc790\uc8fc\ucc3e\ub294\uc9c8\ubb38
+/faq/write.do=kr.faq.action.WriteAction
+/faq/writeForm.do=kr.faq.action.WriteFormAction
+/faq/list.do=kr.faq.action.ListAction
