Signed-off-by: KIMSUNGHO <KIMSUNGHO@DESKTOP-5K6P4QT>

--- a/traveller/src/main/webapp/WEB-INF/sungho.properties
+++ b/traveller/src/main/webapp/WEB-INF/sungho.properties
@@ -3,6 +3,10 @@
 /accom/write.do=kr.accom.action.WriteAction
 /accom/writeForm.do=kr.accom.action.WriteFormAction
 /accom/detail.do=kr.accom.action.DetailAction
+/accom/update.do=kr.accom.action.UpdateAction
 /accom/updateForm.do=kr.accom.action.UpdateFormAction
 /accom/deleteFile.do=kr.accom.action.DeleteFileAction
 /accom/delete.do=kr.accom.action.DeleteAction
+#good
+/accom/getFav.do=kr.accom.action.GetFavAction
+/accom/writeFav.do=kr.accom.action.WriteFavAction
