동행 댓글 추가

--- a/traveller/src/main/webapp/WEB-INF/sungho.properties
+++ b/traveller/src/main/webapp/WEB-INF/sungho.properties
@@ -1,4 +1,4 @@
-#\ub3d9\ud589\ucc3e\uae30 \uac8c\uc2dc\ud310
+#board
 /accom/list.do=kr.accom.action.ListAction
 /accom/write.do=kr.accom.action.WriteAction
 /accom/writeForm.do=kr.accom.action.WriteFormAction
@@ -10,3 +10,8 @@
 #good
 /accom/getFav.do=kr.accom.action.GetFavAction
 /accom/writeFav.do=kr.accom.action.WriteFavAction
+#reply
+/accom/writeReply.do=kr.accom.action.WriteReplyAction
+/accom/listReply.do=kr.accom.action.ListReplyAction
+/accom/deleteReply.do=kr.accom.action.DeleteReplyAction
+/accom/updateReply.do=kr.accom.action.UpdateReplyAction
