사용자맞춤

--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -28,3 +28,5 @@
 /admin/userList.do=kr.admin.action.UserListAction
 /admin/detailUserForm.do=kr.admin.action.DetailUserFormAction
 /admin/detailUser.do=kr.admin.action.DetailUserAction
+#\ud2b8\ub808\ube14\ub7ecPICK
+/recommend/userRecommend.do=kr.recommend.action.UserRecommendAction
