이벤트 리스트 제외 커밋

--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -3,12 +3,28 @@
 /event/eventDetail.do=kr.event.action.EventDetailAction
 /event/eventUpdateForm.do=kr.event.action.EventUpdateFormAction
 /event/eventUpdate.do=kr.event.action.EventUpdateAction
-#\uc774\ubca4\ud2b8-\ub313\uae00
+#\uc774\ubca4\ud2b8 \ub313\uae00
 /event/writeEventReply.do=kr.event.action.EventReplyWriteAction
 /event/eventReplyList.do=kr.event.action.EventReplyListAction
 /event/eventReplyUpdate.do=kr.event.action.EventReplyUpdateAction
 /event/deleteEventReply.do=kr.event.action.EventReplyDeleteAction
-#\uc77c\ub300\uc77c\ubb38\uc758
+#\uc77c\ub300\uc77c \ubb38\uc758 - \uc804\uccb4
 /question/questionList.do=kr.question.action.QuestionListAction
-/question/questionWriteForm.do=kr.question.action.QuestionWriteFormAction
-/question/questionWrite.do=kr.question.action.QuestionWriteAction
+/question/questionDetail.do=kr.question.action.QuestionDetailAction
+#\uc77c\ub300\uc77c \ubb38\uc758 - \uc0ac\uc6a9\uc790
+/question/userQuestionWriteForm.do=kr.question.action.UserQuestionWriteFormAction
+/question/userQuestionWrite.do=kr.question.action.UserQuestionWriteAction
+/question/userQuestionPasswdCheck.do=kr.question.action.UserQuestionPasswdCheckAction
+/question/userQuestionModifyForm.do=kr.question.action.UserQuestionModifyFormAction
+/question/userQuestionModify.do=kr.question.action.UserQuestionModifyAction
+/question/deletePhoto.do=kr.question.action.DeletePhotoAction
+/question/userQuestionDelete.do=kr.question.action.UserQuestionDeleteAction
+#\uc77c\ub300\uc77c \ubb38\uc758 - \uad00\ub9ac\uc790
+/question/adminQuestionWriteForm.do=kr.question.action.AdminQuestionWirteFormAction
+/question/adminQuestionWrite.do=kr.question.action.AdminQuestionWrtieAction
+/question/adminQuestionModifyForm.do=kr.question.action.AdminQuestionModifyFormAction
+
+
+
+
+
