일대일 문의

--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -23,7 +23,7 @@
 /question/adminQuestionWriteForm.do=kr.question.action.AdminQuestionWirteFormAction
 /question/adminQuestionWrite.do=kr.question.action.AdminQuestionWrtieAction
 /question/adminQuestionModifyForm.do=kr.question.action.AdminQuestionModifyFormAction
-
+/question/adminQuestionModify.do=kr.question.action.AdminQuestionModifyAction
 
 
 
