동행신청기능 추가

--- a/traveller/src/main/webapp/WEB-INF/sungho.properties
+++ b/traveller/src/main/webapp/WEB-INF/sungho.properties
@@ -15,5 +15,5 @@
 /accom/listReply.do=kr.accom.action.ListReplyAction
 /accom/deleteReply.do=kr.accom.action.DeleteReplyAction
 /accom/updateReply.do=kr.accom.action.UpdateReplyAction
-#accom
-/accom//applyForAccom.do=kr.accom.action.ApplyForAccomAction
+#apply
+/accom/applyForAccom.do=kr.accom.action.ApplyForAccomAction
