--- a/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
+++ b/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
@@ -15,3 +15,5 @@
 /item/popup2.do=kr.item.action.ItemPopupAction2
 
 #/item/itemDetail.do=kr.item.action.ItemDetailAction
+#cart
+/cart/write.do=kr.cart.action.WriteAction
