--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -30,3 +30,5 @@
 /admin/detailUser.do=kr.admin.action.DetailUserAction
 #\ud2b8\ub808\ube14\ub7ecPICK
 /recommend/userRecommend.do=kr.recommend.action.UserRecommendAction
+#\uc7a5\ubc14\uad6c\ub2c8
+/cart/list.do=kr.cart.action.ListAction
