이벤트 - 개별, css 제외

--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -3,6 +3,7 @@
 /event/eventDetail.do=kr.event.action.EventDetailAction
 /event/eventUpdateForm.do=kr.event.action.EventUpdateFormAction
 /event/eventUpdate.do=kr.event.action.EventUpdateAction
+/event/eventExecute.do=kr.event.action.EventExecuteAction
 #\uc774\ubca4\ud2b8 \ub313\uae00
 /event/writeEventReply.do=kr.event.action.EventReplyWriteAction
 /event/eventReplyList.do=kr.event.action.EventReplyListAction
