--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -32,3 +32,5 @@
 /recommend/userRecommend.do=kr.recommend.action.UserRecommendAction
 #\uc7a5\ubc14\uad6c\ub2c8
 /cart/list.do=kr.cart.action.ListAction
+/cart/deleteCart.do=kr.cart.action.DeleteCartAction
+/cart/modifyCart.do=kr.cart.action.ModifyCartAction
