--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -25,7 +25,8 @@
 /question/adminQuestionWrite.do=kr.question.action.AdminQuestionWrtieAction
 /question/adminQuestionModifyForm.do=kr.question.action.AdminQuestionModifyFormAction
 /question/adminQuestionModify.do=kr.question.action.AdminQuestionModifyAction
-
-
+#\uc8fc\ubb38
+/order/userOrderForm.do=kr.order.action.UserOrderFormAction
+/order/userOrder.do=kr.order.action.UserOrderAction
 
 
