동행신청내역-본인

--- a/traveller/src/main/webapp/WEB-INF/sungho.properties
+++ b/traveller/src/main/webapp/WEB-INF/sungho.properties
@@ -17,3 +17,4 @@
 /accom/updateReply.do=kr.accom.action.UpdateReplyAction
 #apply
 /accom/applyForAccom.do=kr.accom.action.ApplyForAccomAction
+/accom/applyAccomList.do=kr.accom.action.ApplyAccomListAction
