받은 동행신청 내역 작업중...

--- a/traveller/src/main/webapp/WEB-INF/sungho.properties
+++ b/traveller/src/main/webapp/WEB-INF/sungho.properties
@@ -19,3 +19,4 @@
 #apply
 /accom/applyForAccom.do=kr.accom.action.ApplyForAccomAction
 /accom/applyAccomList.do=kr.accom.action.ApplyAccomListAction
+/accom/requestAccomList.do=kr.accom.action.RequestAccomListAction
