--- a/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
+++ b/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
@@ -7,6 +7,7 @@
 /admin/itemModifyForm.do=kr.item.action.ItemModifyFormAction
 /admin/itemModify.do=kr.item.action.ItemModifyAction
 /admin/adminItemModifyStatus.do=kr.item.action.AdminModifyStatusAction
+/admin/adminOrderList.do=kr.order.action.AdminOrderListAction
 #/admin/updateItemPhoto.do=kr.item.action.UpdateItemPhotoAction
 # user
 /item/itemMain.do=kr.item.action.ItemMainAction
