--- a/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
+++ b/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
@@ -20,3 +20,7 @@
 #/item/itemDetail.do=kr.item.action.ItemDetailAction
 #cart
 /cart/write.do=kr.cart.action.WriteAction
+
+#order management admin
+/admin/orderDetail.do=kr.order.action.AdminOrderDetailAction
+//adminModifyOrderForm.do=kr.order.action.AdminModifyOrderFormAction
