--- a/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
+++ b/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
@@ -23,4 +23,5 @@
 
 #order management admin
 /admin/orderDetail.do=kr.order.action.AdminOrderDetailAction
-//adminModifyOrderForm.do=kr.order.action.AdminModifyOrderFormAction
+/admin/adminModifyOrderForm.do=kr.order.action.AdminModifyOrderFormAction
+/admin/orderModifyStatus.do=kr.order.action.AdminOrderModifyStatusAction
