스타일 안 먹힌다고요

--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -28,5 +28,5 @@
 #\uc8fc\ubb38
 /order/userOrderForm.do=kr.order.action.UserOrderFormAction
 /order/userOrder.do=kr.order.action.UserOrderAction
-
-
+/order/userOrderDetail.do=kr.order.action.UserOrderDetailAction
+/order/userOrderModifyForm.do=kr.order.action.UserOrderModifyFormAction
