--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -30,3 +30,4 @@
 /order/userOrder.do=kr.order.action.UserOrderAction
 /order/userOrderDetail.do=kr.order.action.UserOrderDetailAction
 /order/userOrderModifyForm.do=kr.order.action.UserOrderModifyFormAction
+/order/userOrderModify.do=kr.order.action.UserOrderModifyAction
