예약 수정,취소 - 예약횟수 메서드 수정 필요

--- a/traveller/src/main/webapp/WEB-INF/yena.properties
+++ b/traveller/src/main/webapp/WEB-INF/yena.properties
@@ -31,3 +31,4 @@
 /order/userOrderDetail.do=kr.order.action.UserOrderDetailAction
 /order/userOrderModifyForm.do=kr.order.action.UserOrderModifyFormAction
 /order/userOrderModify.do=kr.order.action.UserOrderModifyAction
+/order/userCancel.do=kr.order.action.UserCancelAction
