여행후기 커밋

--- a/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
+++ b/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
@@ -16,6 +16,7 @@
 /item/popup1.do=kr.item.action.ItemPopupAction1
 /item/popup2.do=kr.item.action.ItemPopupAction2
 /item/itemMiddle.do=kr.item.action.ItemMiddleAction
+/item/itemReply.do=kr.item.action.ItemReplyAction
 
 #/item/itemDetail.do=kr.item.action.ItemDetailAction
 #cart
