내가쓴글-후기글

--- a/traveller/src/main/webapp/WEB-INF/eunseo.properties
+++ b/traveller/src/main/webapp/WEB-INF/eunseo.properties
@@ -25,6 +25,7 @@
 #\ub9c8\uc774\ud398\uc774\uc9c0-\ub0b4\uac00 \uc4f4 \uae00
 /member/myWriteComm.do=kr.member.action.MyWriteCommAction
 /member/myWriteAccom.do=kr.member.action.MyWriteAccomAction
+/member/myItemReply.do=kr.member.action.MyItemReplyAction
 #\ub9c8\uc774\ud398\uc774\uc9c0-\uc801\ub9bd\uae08
 /member/myMoney.do=kr.money.action.ListMoneyAction
 #\uad00\ub9ac\uc790
