트래블러추천 커밋

--- a/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
+++ b/traveller/src/main/webapp/WEB-INF/hyeonjin.properties
@@ -26,3 +26,4 @@
 /admin/orderDetail.do=kr.order.action.AdminOrderDetailAction
 /admin/adminModifyOrderForm.do=kr.order.action.AdminModifyOrderFormAction
 /admin/orderModifyStatus.do=kr.order.action.AdminOrderModifyStatusAction
+/recommend/adminRecommend.do=kr.item.action.ItemRecommendAction
